# argvsucks

./: README-edit.md  README.md  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: index.html
examples/: usage.py
