[tool.poetry]
name = "argvsucks"
version = "0.230725.3"
description = ""
authors = ["davips <dpsabc@gmail.com>"]
readme = "README.md"
packages = [{include = "argvsucks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
